--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Katzuki <theraccoongamerg@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "discord.js": "^14.7.1"
+    "discord.js": "^14.7.1",
+    "dotenv": "^16.0.3"
   }
 }
